Reading the transactions from the H2 database.